# tgbot

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  save-docker.bat  vcpkg.json
include/: CMakeLists.txt  compilers.h  util.h
include/configuration/: configuration.h
include/log/: logger.h  logging.h  logmanager.h  types.h
include/sqlite/: sqlite.h
include/tgapi/: RestClient.h  rest_client.h  tgapi.h
include/tgapi/bot/: bot.h
include/tgapi/command/: command_module.h  function.h
include/tgapi/fmt/: tgbot_fmt.h
include/tgapi/types/: api_types.h  api_types_parse.h
src/: CMakeLists.txt  main.cpp
src/configuration/: configuration.cpp
src/log/: log.cpp  logmanager.cpp
src/parse/: api_types.cpp
src/sqlite/: sqlite.cpp
src/tgapi/: bot.cpp  command_module.cpp  rest_client.cpp
src/util/: generic_util.cpp  linux_util.cpp  win_util.cpp
